--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <div>
                     <div class="">
                         <p style="margin-top: 100px; margin-bottom:-40px; font-size: 20px; filter: drop-shadow(10px 5px 4px #000);">Харитонова В.В.</p>
-                        <p style="font-size: calc(2.375rem + 1.5vw); filter: drop-shadow(10px 5px 4px #000);">Декоративно-ужиткове мистецтво. Нанизування</p>
-                        <p style="font-size: calc(0.475rem + 1.5vw);font-weight: 300; filter: drop-shadow(10px 5px 4px #000);">лабораторний практикум</p>
+                        <p style="font-size: calc(2.375rem + 1.5vw); filter: drop-shadow(10px 5px 4px #000);">Декоративно-ужиткове мистецтво. Нанизування та вишивання</p>
+                        <p style="font-size: calc(0.475rem + 1.5vw);font-weight: 300; filter: drop-shadow(10px 5px 4px #000);"></p>
                  </div>
     
                 </div>                                       
