--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="css/normalize.css">
     <script src="Script/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/Main-page.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
